Added some info about myself

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 Jane Vazquez
+
+About
+
+I am a 31 year old woman who loves cooking and video games.
+
+Experience
+
+Denny's
+King David Towers
+Starbucks
+
+Connect
+
+Email: janevazquez314@gmail.com
+github: https://github.com/critakara
