added small boilerplate html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
-Jane Vazquez
+<!DOCTYPE html>
+<head>
+  <title>
+    Jane Vazquez
+    </title>
+</head>
 
-About
+<body>
 
-I am a 31 year old woman who loves cooking and video games.
 
-Experience
 
-Denny's
-King David Towers
-Starbucks
 
-Connect
 
-Email: janevazquez314@gmail.com
-github: https://github.com/critakara
+
+  <section>   
+<h1>About</h1>
+
+<p>I am a 31 year old woman who loves cooking and video games.</p>
+
+<section>
+<h1>Experience</h1>
+
+<ul>
+<li>Denny's</li>
+<li>King David Towers</li>
+<li>Starbucks</li>
+</ul
+<section>
+  <h1>Connect</h1>
+  
+<ul>
+<li>Email: janevazquez314@gmail.com</li>
+<li>github: https://github.com/critakara</li>
+</ul>
+</body>
+
+<html>
