added message book functionality

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 
 
-  <section>   
+<section>   
 <h1>About</h1>
 
 <p>I am a 31 year old woman who loves cooking and video games.</p>
-
+</section>
 <section>
 <h1>Experience</h1>
 
@@ -24,14 +24,38 @@
 <li>Denny's</li>
 <li>King David Towers</li>
 <li>Starbucks</li>
-</ul
-<section>
-  <h1>Connect</h1>
+</ul>
+</section>
+<section id="skills">
+  <h2>Skills</h2>
+  <ul> </ul>
+  
+  </section>
+
+  <section>
+    <h1>Connect</h1>
   
 <ul>
 <li>Email: janevazquez314@gmail.com</li>
 <li>github: https://github.com/critakara</li>
 </ul>
+  </section>
+
+  <section>
+    <h2>Leave a Message</h2>
+    <form name="leave_message">
+      <input type="text" name="usersName" required="true"><br>
+      <input type="email" name="usersEmail" required="true"><br>
+      <textarea name="usersMessage" required="true"></textarea><br>
+	<button type="submit">Submit</button>
+      </form>
+  </section>
+  <section id="messages">
+    <h2>Messages</h2>
+    <ul></ul>
+      </section>
+<footer>
+<script src=js/index.js></script>
 </body>
 
 <html>
