added some ajax stuff

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
     
   </div>
   </section>
+<section id="projects">
+  <h2>Projects</h2>
+  <ul> </ul>
+  </section>
+
 
   <section id="connect">
     <h1>Connect</h1>
