revised to the review critiques

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+  <div class="thisPage"><h1>Jane Vazquez's Portfolio</h1></div>
   <div class="navigationBar">
     <div class="aboutLink"><h3><a href="#about">About</a></h3></div>
     <div class="experienceLink"><h3><a href="#experience">Experience</a></h3></div>
@@ -26,14 +28,14 @@
 
 
  <section id="about">   
-<h1>About</h1>
+<h2>About</h2>
 
 <div class="about">
   <p>I am a 31 year old woman who loves cooking and video games.</p>
   </div>
 </section>
 <section id="experience">
-<h1>Experience</h1>
+<h2>Experience</h2>
 
 <div class="experienceListParent">
 <ul class="experienceListChild">
@@ -46,7 +48,7 @@
 
 
 <section id="skills">
-  <h1>Skills</h1>
+  <h2>Skills</h2>
   <div class="skillsListParent">
     <ul class="skillsListChild"></ul>
     </div>
@@ -62,7 +64,7 @@
 
 
   <section id="connect">
-    <h1>Connect</h1>
+    <h2>Connect</h2>
   <div class="connectList">
 <ul>
 <li><a href="mailto:janevazquez314@gmail.com">Email</a></li>
@@ -82,7 +84,7 @@
   </section>
   <section id="messages">
     <h2>Messages</h2>
-	<div id="messageListParent">
+	<div class="messageListParent">
       <ul class="messageListChild">  </ul>
 </div>
       </section>
